# z-filters

./: batman.ipynb  butter.ipynb  equalizer.ipynb  equalizer.py  examples_filters.ipynb  filters.py  fir_ls.ipynb  plots.py  pyproject.toml  s_to_z.ipynb
.ipynb_checkpoints/: examples_filters-checkpoint.ipynb
