[tool.poetry]
name = "z-filters"
version = "0.1.0"
description = ""
authors = ["alelouis <me@alelouis.eu>"]

[tool.poetry.dependencies]
python = "=3.8"
jupyterlab = "^3.4.2"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
sympy = "^1.10.1"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
